adding height and fixing footer

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         </section>
 
     </main>
+    <div>
+
+    </div>
     <aside>
        <h2>Additional Information</h2>
        <ul>
@@ -50,8 +53,8 @@
          <li><a href="https://www.history.com/topics/ancient-greece/aristotle">History.com</History></a></li>
        </ul>
     </aside>
-    <footer>
+   <footer>
      <p>&copy;Marianne Moyo 2024</p>
-    </footer>
+   </footer>
 </body>
 </html>
