fixing for assingment 2

--- a/index.html
+++ b/index.html
@@ -14,45 +14,46 @@
     <header>
        <h1>Aristotle</h1>
     </header>
+    <nav class="listnav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="media.html">Media</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
     <main>
         <section>
-            <h2>Biography</h2>
-            <p>
-                <i>Aristotle was an Ancient Greek philosopher.</i>
-                His writings covered a broad range of subjects, including the Arts, Philosophy, Math, Linguistics, Economics, Politics and Psychology.
-                <em> He has written many things for publication on these subjects, but only around a 3rd of these writings have survived.</em> To this day his writings remain a subject of contemporary philosophical discussion around the world.
-            </p>
+          <table>
+            <thead>
+              <tr>
+                <th>biography</th>
+                <th>life</th>
+                <th>image</th>
+                <th>quotes</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Aristotle was an Ancient Greek philsopher and polymath. <em>His writings cover a broad range of subjects and have greatly influced the development of modern science.</em> </td>
+                <td>He was born in the city of Stagira in Northern Greece during the classical period, and when he was 18 he joined Plato's academy.</td>
+                <td><img class="mainimg" id="firstimg" src="images\3e4f2258-9d73-4002-92a4-b18104a89c2e.jpg" alt="Picture of Aristotle"></td>
+                <td> <blockquote cite="https://www.brainyquote.com/quotes/aristotle_100584">
+                  It is the mark of an educated mind to be able to entertain a thought without accepting it.
+                </blockquote></td>
+              </tr>
+            </tbody>
+          </table>
         </section>
-        <section>
-           <h2>Images</h2>
-           <figure>
-             <img class="mainimg" id="firstimg" src="images\3e4f2258-9d73-4002-92a4-b18104a89c2e.jpg" alt="Picture of Aristotle">
-             <figcaption>Portrait of Aristotle</figcaption>
-           </figure>
-           <figure>
-             <img class="mainimg" id="secondimg" src="images\1_JU_IEwqT55-2oZayzB0drA.jpg" alt="Painting of what aristotle would have looked like">
-             <figcaption>Painting of Aristotle</figcaption>
-           </figure>
-        </section>
-        <section>
-           <h2>Quotes</h2>
-           <blockquote cite="https://www.brainyquote.com/quotes/aristotle_100584">
-             It is the mark of an educated mind to be able to entertain a thought without accepting it.
-           </blockquote>
-        </section>
-
+        <aside id="moreinformation">
+          <h3>Additional Information</h3>
+          <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Aristotle">Wikipedia</a></li>
+            <li><a href="https://plato.stanford.edu/entries/aristotle/">Standford edu</a></li>
+            <li><a href="https://www.history.com/topics/ancient-greece/aristotle">History.com</History></a></li>
+          </ul>
+       </aside>
     </main>
-    <div>
-
-    </div>
-    <aside>
-       <h2>Additional Information</h2>
-       <ul>
-         <li><a href="https://en.wikipedia.org/wiki/Aristotle">Wikipedia</a></li>
-         <li><a href="https://plato.stanford.edu/entries/aristotle/">Standford edu</a></li>
-         <li><a href="https://www.history.com/topics/ancient-greece/aristotle">History.com</History></a></li>
-       </ul>
-    </aside>
    <footer>
      <p>&copy;Marianne Moyo 2024</p>
    </footer>
